# gravity-genesis-contract

./: .env.example  .gitignore  .gitmodules  .solhint.json  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SUMMARY.md  foundry.toml  generate_genesis.sh  package.json  slither.config.json
generate/: CONTRACT_INITIALIZATION_ORDER.md  README.md  combine_account_alloc.py  convert_hours_to_microsecs.py  extract_bytecode.py  fix_hex_length.py  generate_accounts.py  genesis_config.json  genesis_generate.py  genesis_template.json  jwks_provider.json  jwks_template.json
gravity-genesis/: Cargo.toml  README.md  README_GENESIS_INIT.md
gravity-genesis/src/: execute.rs  genesis.rs  jwks.rs  lib.rs  main.rs  post_genesis.rs  utils.rs
script/: CheckHashOracle.s.sol  TestHashOracle.s.sol  security_analysis.sh
script/utils/: ProxyHelper.sol
src/: System.sol  SystemReward.sol
src/access/: Protectable.sol
src/block/: Block.sol
src/dkg/: DKG.sol  RandomnessConfig.sol  ReconfigurationWithDKG.sol
src/epoch/: EpochManager.sol
src/genesis/: Genesis.sol
src/governance/: GovHub.sol  GovToken.sol  GravityGovernor.sol  Timelock.sol
src/interfaces/: IBlock.sol  IDKG.sol  IDelegation.sol  IEpochManager.sol  IGovToken.sol  IGroth16Verifier.sol  IHashOracle.sol  IJWKManager.sol  IKeylessAccount.sol  IParamSubscriber.sol  IRandomnessConfig.sol  IReconfigurableModule.sol  IReconfigurationWithDKG.sol  IStakeConfig.sol  IStakeCredit.sol  ISystemReward.sol  ITimestamp.sol  IValidatorManager.sol  IValidatorManagerUtils.sol  IValidatorPerformanceTracker.sol
src/jwk/: Groth16Verifier.sol  JWKManager.sol  JWKUtils.sol  KeylessAccount.sol
src/lib/: Bytes.sol  ValidatorManagerUtils.sol
src/oracle/: HashOracle.sol
src/stake/: Delegation.sol  StakeConfig.sol  StakeCredit.sol  ValidatorManager.sol  ValidatorPerformanceTracker.sol
src/timestamp/: Timestamp.sol
test/: README.md
test/integration/: CrossChainHash.t.integration.sol
test/mocks/: BlockMock.sol  DKGMock.sol  EpochManagerMock.sol  GovTokenMock.sol  GravityGovernorMock.sol  JWKManagerMock.sol  KeylessAccountMock.sol  RandomnessConfigMock.sol  ReconfigurableModuleMock.sol  ReconfigurationWithDKGMock.sol  StakeConfigMock.sol  StakeCreditMock.sol  TimelockMock.sol  TimestampMock.sol  ValidatorManagerMock.sol  (+1 more)
(+19 files in other folders)
